--- a/index.html
+++ b/index.html
@@ -40,40 +40,43 @@
 
         <main class="cards-container" id="cardsContainer"></main>
 
-        <nav class="bottom-nav">
-            <button class="nav-btn" id="likeBtn">
+        <!-- Side Actions (TikTok style) -->
+        <nav class="side-nav">
+            <button class="nav-btn" id="likeBtn" title="Beğen">
                 <svg class="icon icon-outline" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                     <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
                 </svg>
                 <svg class="icon icon-filled" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
                 </svg>
-                <span class="label">Begen</span>
             </button>
-            <button class="nav-btn" id="saveBtn">
+            <button class="nav-btn" id="saveBtn" title="Kaydet">
                 <svg class="icon icon-outline" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                     <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/>
                 </svg>
                 <svg class="icon icon-filled" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/>
                 </svg>
-                <span class="label">Kaydet</span>
             </button>
-            <button class="nav-btn" id="shareBtn">
+            <button class="nav-btn" id="shareBtn" title="Paylaş">
                 <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"/>
                     <polyline points="16 6 12 2 8 6"/>
                     <line x1="12" y1="2" x2="12" y2="15"/>
                 </svg>
-                <span class="label">Paylas</span>
             </button>
-            <button class="nav-btn" id="sourceBtn">
+            <button class="nav-btn" id="sourceBtn" title="Kaynak">
                 <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/>
                     <polyline points="15 3 21 3 21 9"/>
                     <line x1="10" y1="14" x2="21" y2="3"/>
                 </svg>
-                <span class="label">Kaynak</span>
+            </button>
+            <button class="nav-btn" id="notInterestedBtn" title="İlgilenmiyorum">
+                <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <circle cx="12" cy="12" r="10"/>
+                    <line x1="4.93" y1="4.93" x2="19.07" y2="19.07"/>
+                </svg>
             </button>
         </nav>
 
