--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>WikiScroll</title>
+    <title>wikiscroll.</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%23000' width='100' height='100' rx='20'/><text x='50' y='72' font-family='system-ui,sans-serif' font-size='50' font-weight='bold' fill='%23fff' text-anchor='middle'>ws</text><text x='88' y='72' font-family='system-ui,sans-serif' font-size='50' font-weight='bold' fill='%23666' text-anchor='middle'>.</text></svg>">
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="stylesheet" href="css/style.css">
@@ -40,9 +41,8 @@
 
         <main class="cards-container" id="cardsContainer"></main>
 
-        <!-- Side Actions (TikTok style) -->
         <nav class="side-nav">
-            <button class="nav-btn" id="likeBtn" title="Beğen">
+            <button class="nav-btn" id="likeBtn" data-tooltip="Beğen">
                 <svg class="icon icon-outline" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                     <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
                 </svg>
@@ -50,7 +50,7 @@
                     <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
                 </svg>
             </button>
-            <button class="nav-btn" id="saveBtn" title="Kaydet">
+            <button class="nav-btn" id="saveBtn" data-tooltip="Kaydet">
                 <svg class="icon icon-outline" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                     <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/>
                 </svg>
@@ -58,21 +58,21 @@
                     <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/>
                 </svg>
             </button>
-            <button class="nav-btn" id="shareBtn" title="Paylaş">
+            <button class="nav-btn" id="shareBtn" data-tooltip="Paylaş">
                 <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"/>
                     <polyline points="16 6 12 2 8 6"/>
                     <line x1="12" y1="2" x2="12" y2="15"/>
                 </svg>
             </button>
-            <button class="nav-btn" id="sourceBtn" title="Kaynak">
+            <button class="nav-btn" id="sourceBtn" data-tooltip="Kaynak">
                 <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/>
                     <polyline points="15 3 21 3 21 9"/>
                     <line x1="10" y1="14" x2="21" y2="3"/>
                 </svg>
             </button>
-            <button class="nav-btn" id="notInterestedBtn" title="İlgilenmiyorum">
+            <button class="nav-btn" id="notInterestedBtn" data-tooltip="İlgilenmiyorum">
                 <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <circle cx="12" cy="12" r="10"/>
                     <line x1="4.93" y1="4.93" x2="19.07" y2="19.07"/>
@@ -81,7 +81,7 @@
         </nav>
 
         <div class="scroll-hint" id="scrollHint">
-            <span>^ Kaydir</span>
+            <span>↑ Kaydır</span>
         </div>
 
         <div class="modal-overlay" id="resetModal">
