--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                         <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/>
                     </svg>
                 </button>
-                <button class="header-btn" id="infoBtn" title="Hakkinda">
+                <button class="header-btn" id="infoBtn" title="Hakkında">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                         <circle cx="12" cy="12" r="10"/>
                         <path d="M12 16v-4"/>
                         <path d="M12 8h.01"/>
                     </svg>
                 </button>
-                <button class="header-btn" id="resetBtn" title="Sifirla">
+                <button class="header-btn" id="resetBtn" title="Sıfırla">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                         <path d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/>
                         <path d="M3 3v5h5"/>
