feat(ui): add scroll next button for tablet and desktop

--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
             <span>↑ Kaydır</span>
         </div>
 
+        <button class="scroll-next-btn" id="scrollNextBtn" title="Sonraki">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="6 9 12 15 18 9"/>
+            </svg>
+        </button>
+
         <div class="modal-overlay" id="resetModal">
             <div class="modal">
                 <div class="modal-title">Sifirla</div>
